# rehearse

./: .gitignore  Cargo.toml
examples/: rehearse.json
examples/bad-formats/: bad_format_2.json  bad_format_4.json
examples/failing-tests/: bad_format_1.json  bad_format_3.json
examples/fizz-buzz/: rehearse.json  run.py
examples/hello-world/: rehearse.json  stderr.expected
examples/should-error/: rehearse.json
examples/slow/: rehearse.json  run.py  stdout.expected
src/: artifacts.rs  cli.rs  diff.rs  lib.rs  main.rs  match_script.rs  priority_queue.rs  test_cases.rs
src/diff/: differ.rs  priority_queue.rs
src/match_script/: char_source.rs  error.rs  expression_parser.rs  functions.rs  grapheme_source.rs  proto_grapheme_source.rs  proto_parser.rs
src/test_cases/: parser.rs  reporter.rs  runner.rs
