[package]
name = "rehearse"
version = "0.1.0"
edition = "2018"

[dependencies]
regex = "^1.0.0"
glob = "^0.3.0"
serde_json = "^1.0"
log = "^0.4.14"
simplelog = "^0.11.2"
crossterm = "^0.22.1"
atty = "^0.2.14"

[dev-dependencies]
quickcheck = "^1.0.0"
quickcheck_macros = "^1.0.0"

[[bin]]
# Even though it looks like tests are turned off, cargo test
# will still run them because tests are compiled using the lib target.
# In fact, if the tests weren't turned off here, cargo test would run
# them twice.
name = "rehearse"
test = false
